add: quotes for profile-card

--- a/index.html
+++ b/index.html
@@ -230,6 +230,8 @@
                 <div class="identity">
                     <h3 class="name">Muhammad Ammar Afif</h3>
                     <p class="badge">Information Technology</p>
+                    <p class="quote">"Lebih baik gagal saat mencoba dari pada tidak pernah berani memulai karena takut
+                        gagal!".</p>
                 </div>
                 <hr class="title-divide">
                 <div class="social">
