reactor: mobile view max-width=768px

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         </aside>
     </main>
     <footer>
-        &copy; <span id="footerYearCopyright"></span>, Sergio App
+        &copy; <span id="footerYearCopyright"></span> Presented from Muhammad Ammar Afif.
     </footer>
 
     <script src="/assets/app.js"></script>
