refactor: replace layout setting with flexbox not float

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <img class="photo-profile" src="assets/image/photo.jpg" alt="photo-profile" srcset="">
                 <div class="identity">
                     <h3 class="name">Muhammad Ammar Afif</h3>
-                    <p class="badge">Information Technology</p>
+                    <p class="badge">Anak Kampung</p>
                     <p class="quote">"Lebih baik gagal saat mencoba dari pada tidak pernah berani memulai karena takut
                         gagal!".</p>
                 </div>
